# routes/api.php
@@ -4,9 +4,13 @@ use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\AuthController;
 
 Route::post('login', [AuthController::class, 'login']);
-Route::middleware(['api', 'auth:api'])->group(function(){
+Route::middleware(['auth:api'])->group(function(){
     Route::post('logout', [AuthController::class, 'logout']);
     Route::post('refresh', [AuthController::class, 'refresh']);
     Route::get('me', [AuthController::class, 'me']);
+
+    Route::prefix('user')->group(function(){
+        Route::get('me', [AuthController::class, 'me']);
+    });
 });
 
